--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
+/* Add your CSS styles here */
 
+body {
+    font-family: Arial, sans-serif;
+}
+
+h1 {
+    color: blue;
+}
+
+p {
+    margin: 10px 0;
+}
